--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-cachetools==4.2.1
-google-auth==1.27.0
-google-auth-oauthlib==0.4.2
-gspread==3.7.0
-oauthlib==3.1.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-requests-oauthlib==1.3.0
-rsa==4.7.2
+cachetools==5.3.2
+certifi==2023.7.22
+charset-normalizer==3.3.2
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+gspread==5.12.0
+idna==3.4
+numpy==1.26.1
+oauthlib==3.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+urllib3==2.0.7
